--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -24,15 +24,11 @@ jobs:
           push: true
           tags: poquirion/ncov-tools:alpha
   release:
-          -
-            if: ${{ github.ref == ''ref/head/master' }}
-            needs: build
-            - run : |
+          - if: ${{ github.ref == ''ref/head/master' }}
+            run : |
                     docker tags poquirion/ncov-tools:alpha poquirion/ncov-tools:latest
                     docker push poquirion/ncov-tools:latest
-          -
-            if: {{github.ref == 'ref/head/v*}}
-            need: build
-            - run : |
+          - if: {{github.ref == 'ref/head/v*}}
+            run : |
                     docker tags poquirion/ncov-tools:alpha poquirion/ncov-tools:${GITHUB_REF}
                     docker push poquirion/ncov-tools:${GITHUB_REF}
