--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -7,28 +7,26 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
+      - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build on all branch
+      - name: Build on all branch
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: true
           tags: poquirion/ncov-tools:alpha
-  release:
-          - if: ${{ github.ref == 'ref/head/master' }}
-            run : |
+      - name: push latest 
+        if: ${{ github.ref == 'ref/head/master' }}
+        run : |
                     docker tags poquirion/ncov-tools:alpha poquirion/ncov-tools:latest
                     docker push poquirion/ncov-tools:latest
-          - if: {{ github.ref == 'ref/head/v*' }}
-            run : |
+      - name: push tag
+        if: {{ github.ref == 'ref/head/v*' }}
+        run : |
                     docker tags poquirion/ncov-tools:alpha poquirion/ncov-tools:${GITHUB_REF}
                     docker push poquirion/ncov-tools:${GITHUB_REF}
