--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -20,13 +20,13 @@ jobs:
         with:
           push: true
           tags: poquirion/ncov-tools:alpha
-      - name: push latest 
+      - name: push latest
         if: ${{ github.ref == 'ref/head/master' }}
         run : |
                     docker tags poquirion/ncov-tools:alpha poquirion/ncov-tools:latest
                     docker push poquirion/ncov-tools:latest
       - name: push tag
-        if: {{ github.ref == 'ref/head/v*' }}
+        if: ${{ github.ref == 'ref/head/v*' }}
         run : |
                     docker tags poquirion/ncov-tools:alpha poquirion/ncov-tools:${GITHUB_REF}
                     docker push poquirion/ncov-tools:${GITHUB_REF}
