--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -7,13 +7,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Pull existing image to use as cache
+         run: docker pull poquirion/ncov-tools:alpha
       - name: Build on all branch
         id: docker_build
         uses: docker/build-push-action@v2
