--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -7,26 +7,36 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Pull existing image to use as cache
-        run: docker pull poquirion/ncov-tools:alpha
       - name: Build on all branch
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: true
           tags: poquirion/ncov-tools:alpha
+          cache-from: type=registry,ref=poquirion/ncov-tools:alpha
+          cache-to: type=inline
       - name: push latest
         if: ${{ github.ref == 'ref/head/master' }}
-        run : |
-                    docker tags poquirion/ncov-tools:alpha poquirion/ncov-tools:latest
-                    docker push poquirion/ncov-tools:latest
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: poquirion/ncov-tools:latest
+          cache-from: type=registry,ref=poquirion/ncov-tools:alpha
+          cache-to: type=inline
       - name: push tag
         if: ${{ github.ref == 'ref/head/v*' }}
-        run : |
-                    docker tags poquirion/ncov-tools:alpha poquirion/ncov-tools:${GITHUB_REF}
-                    docker push poquirion/ncov-tools:${GITHUB_REF}
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: poquirion/ncov-tools:${GITHUB_REF}
+          cache-from: type=registry,ref=poquirion/ncov-tools:alpha
+          cache-to: type=inline
