--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -4,8 +4,10 @@ name: build-image
 on: [push, release]
 
 jobs:
-  build:
     runs-on: ubuntu-latest
+    env:
+      GH_REPO: poquirion
+      REPO_NAME: ncov-tools
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -19,8 +21,8 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: poquirion/ncov-tools:alpha
-          cache-from: type=registry,ref=poquirion/ncov-tools:alpha
+          tags: ${GH_REPO}/${REPO_NAME}:alpha
+          cache-from: type=registry,ref=${GH_REPO}/${REPO_NAME}:alpha
           cache-to: type=inline
       - name: push latest
         if: ${{ github.ref == 'ref/head/master' }}
@@ -28,15 +30,15 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: poquirion/ncov-tools:latest
-          cache-from: type=registry,ref=poquirion/ncov-tools:alpha
+          tags: ${GH_REPO}/${REPO_NAME}:latest
+          cache-from: type=registry,ref=${GH_REPO}/${REPO_NAME}:alpha
           cache-to: type=inline
       - name: push tag
-        if: ${{ github.ref == 'ref/head/v*' }}
+        if: contains(github.ref, 'tags/v')
         id: tag
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: poquirion/ncov-tools:${GITHUB_REF}
-          cache-from: type=registry,ref=poquirion/ncov-tools:alpha
+          tags: ${GH_REPO}/${REPO_NAME}:${GITHUB_REF}
+          cache-from: type=registry,ref=${GH_REPO}/${REPO_NAME}:alpha
           cache-to: type=inline
