--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -4,41 +4,42 @@ name: build-image
 on: [push, release]
 
 jobs:
-  runs-on: ubuntu-latest
-  env:
-    GH_REPO: poquirion
-    REPO_NAME: ncov-tools
-  steps:
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-    - name: Login to DockerHub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Build on all branch
-      id: alpha
-      uses: docker/build-push-action@v2
-      with:
-        push: true
-        tags: ${GH_REPO}/${REPO_NAME}:alpha
-        cache-from: type=registry,ref=${GH_REPO}/${REPO_NAME}:alpha
-        cache-to: type=inline
-    - name: push latest
-      if: ${{ github.ref == 'ref/head/master' }}
-      id: latest
-      uses: docker/build-push-action@v2
-      with:
-        push: true
-        tags: ${GH_REPO}/${REPO_NAME}:latest
-        cache-from: type=registry,ref=${GH_REPO}/${REPO_NAME}:alpha
-        cache-to: type=inline
-    - name: push tag
-      if: contains(github.ref, 'tags/v')
-      id: tag
-      uses: docker/build-push-action@v2
-      with:
-        push: true
-        tags: ${GH_REPO}/${REPO_NAME}:${GITHUB_REF}
-        cache-from: type=registry,ref=${GH_REPO}/${REPO_NAME}:alpha
-        cache-to: type=inline
+  build:
+    runs-on: ubuntu-latest
+    env:
+      GH_REPO: poquirion
+      REPO_NAME: ncov-tools
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build on all branch
+        id: alpha
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ${GH_REPO}/${REPO_NAME}:alpha
+          cache-from: type=registry,ref=${GH_REPO}/${REPO_NAME}:alpha
+          cache-to: type=inline
+      - name: push latest
+        if: ${{ github.ref == 'ref/head/master' }}
+        id: latest
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ${GH_REPO}/${REPO_NAME}:latest
+          cache-from: type=registry,ref=${GH_REPO}/${REPO_NAME}:alpha
+          cache-to: type=inline
+      - name: push tag
+        if: contains(github.ref, 'tags/v')
+        id: tag
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ${GH_REPO}/${REPO_NAME}:${GITHUB_REF}
+          cache-from: type=registry,ref=${GH_REPO}/${REPO_NAME}:alpha
+          cache-to: type=inline
