--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -7,8 +7,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      GH_REPO: poquirion
-      REPO_NAME: ncov-tools
+      GH_REPO: poquirion/ncov-tools
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -22,8 +21,8 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${GH_REPO}/${REPO_NAME}:alpha
-          cache-from: type=registry,ref=${GH_REPO}/${REPO_NAME}:alpha
+          tags: ${{ env.GH_REPO }}:alpha
+          cache-from: type=registry,ref=${{ env.GH_REPO }}:alpha
           cache-to: type=inline
       - name: push latest
         if: ${{ github.ref == 'ref/head/master' }}
@@ -31,8 +30,8 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${GH_REPO}/${REPO_NAME}:latest
-          cache-from: type=registry,ref=${GH_REPO}/${REPO_NAME}:alpha
+          tags: ${{ env.GH_REPO }}:latest
+          cache-from: type=registry,ref=${{ env.GH_REPO }}:alpha
           cache-to: type=inline
       - name: push tag
         if: contains(github.ref, 'tags/v')
@@ -40,6 +39,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${GH_REPO}/${REPO_NAME}:${GITHUB_REF}
-          cache-from: type=registry,ref=${GH_REPO}/${REPO_NAME}:alpha
+          tags: ${{ env.GH_REPO }}:${GITHUB_REF}
+          cache-from: type=registry,ref=${{ env.GH_REPO }}:alpha
           cache-to: type=inline
